--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="dist/img/cropped-Sin-titulo-2-32x32.png" sizes="32x32">
+
     <meta name="description" content="Servicios integrales de consultoría, asesoría, capacitación
     y desarrollo integral en todas las áreas empresariales">
     <meta name="author" content="Juan Jose Lazo Hoyos">
@@ -17,16 +18,33 @@
 
     <header>
         <div align="center">
-            <img src="dist/img/logo.png" width="150px" alt="logo_qse">
-            <h1>Bienvenido a QSE Consulting</h1>
+            <table>
+                <thead>
+                    <tr>
+
+                        <th>
+                            <img src="dist/img/logo.png" width="100px" alt="logo_qse">
+                        </th>
+                        <th width="20"></th>
+                        <th>
+                            <h1> Bienvenido a QSE Consulting</h1>
+                        </th>
+
+                    </tr>
+                </thead>
+
+
+            </table>
+
             <h2>Servicios integrales de consultoría, asesoría, capacitación
                 y desarrollo integral en todas las áreas empresariales</h2>
         </div>
 
+
         <hr>
         <nav>
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
                 <li><a href="#servicios">Nuestros Servicios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -36,7 +54,7 @@
     </header>
 
 
-    <section id="inicio">
+    <section id="nosotros">
         <h2>Nosotros</h2>
 
         <h5>¿POR QUÉ CONFIAR EN QSE CONSULTING?</h5>
@@ -55,6 +73,7 @@
         </div>
 
     </section>
+
     <br>
 
     <main>
@@ -124,20 +143,21 @@
 
     <br>
 
+    <hr>
     <footer>
-        <div>
+
+
+        <div align="center">
+            <p>Todos los derechos resevados &copy;</p>
+        </div>
+
+        <div align="center">
             <a href="www.tiktok.com" target="_blank">whatsapp</a>
             <a href="www.facebook.com/" target="_blank">Facebook</a>
             <a href="www.instagram.com" target="_blank">Instagram</a>
             <a href="www.x.com" target="_blank">X</a>
 
         </div>
-
-        <div align="center">
-            <p>Todos los derechos resevados &copy;</p>
-        </div>
-
-
 
     </footer>
     <br>
