--- a/sistema_de_gestion_de_calidad.html
+++ b/sistema_de_gestion_de_calidad.html
@@ -16,12 +16,64 @@
 </head>
 
 <body>
+    <header>
+
+        <div align="center">
+            <table>
+                <thead>
+                    <tr>
+
+                        <th>
+                            <img src="dist/img/logo.png" width="100px" alt="logo_qse">
+                        </th>
+                        <th width="20"></th>
+                        <th>
+                            <h1> Bienvenido a QSE Consulting</h1>
+                        </th>
+
+                    </tr>
+                </thead>
+
+
+            </table>
+
+            <h2>Servicios integrales de consultoría, asesoría, capacitación
+                y desarrollo integral en todas las áreas empresariales</h2>
+        </div>
+
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="index.html#nosotros">Nosotros</a></li>
+                <li><a href="index.html#servicios">Nuestros Servicios</a></li>
+                <li><a href="index.html#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
     <main>
         <section>
-            <a href="index.html"><img src="dist/img/arrow-left-solid.svg" alt="atras"> </a>
-            <h1> Sistema de gestion de calidad
-                iso 9001:2015</h1>
+
             <hr>
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <th>
+                            <a href="index.html"><img src="dist/img/arrow-left-solid.svg" alt="atras" width="15"> </a>
+                        </th>
+                        <th align="center">
+
+                            <h2>Sistema de gestion de calidad
+                                iso 9001:2015</h1>
+
+
+                        </th>
+                    </tr>
+                </thead>
+            </table>
+            <hr>
+
             <p align="justify">Cuando una organización se certifica bajo la norma ISO 9001:2015, comunica a sus
                 clientes, proveedores y
                 todos sus colaboradores su compromiso con la calidad y con el cumplimiento de los requisitos y
@@ -50,8 +102,25 @@
 
         </section>
     </main>
+    <br>
+    <hr>
+    <footer>
 
+        <div align="center">
+            <p>Todos los derechos resevados &copy;</p>
+        </div>
 
+        <div align="center">
+            <a href="www.tiktok.com" target="_blank">whatsapp</a>
+            <a href="www.facebook.com/" target="_blank">Facebook</a>
+            <a href="www.instagram.com" target="_blank">Instagram</a>
+            <a href="www.x.com" target="_blank">X</a>
+
+        </div>
+
+    </footer>
+    <br>
+    <br>
 
 </body>
 
