--- a/index.html
+++ b/index.html
@@ -36,19 +36,38 @@
 
             </table>
 
-            <h2>Servicios integrales de consultoría, asesoría, capacitación
-                y desarrollo integral en todas las áreas empresariales</h2>
         </div>
-
 
         <hr>
         <nav>
-            <ul>
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#servicios">Nuestros Servicios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
+            <div align="center">
+                <table>
+                    <thead>
+                        <tr>
+
+
+
+                            <th>
+                                <a href="index.html#nosotros">Nosotros</a>
+                            </th>
+                            <th width="20"></th>
+                            <th>
+                                <a href="index.html#servicios">Nuestros Servicios</a>
+                            </th>
+                            <th width="20"></th>
+
+                            <th>
+                                <a href="index.html#contacto">Contacto</a>
+                            </th>
+
+
+
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </nav>
+
 
         <hr>
     </header>
@@ -68,6 +87,28 @@
             Manejamos además un alto estándar de responsabilidad con el cual ejecutamos todas nuestras actividades, las
             cuales buscan en todo momento la satisfacción de los requisitos de nuestros clientes, en un ámbito de
             desarrollo mutuo y constante.</p>
+        <br>
+
+        <table cellpadding="10" cellspacing="0" align="center" width="100%">
+            <thead align="center">
+                <tr>
+                    <th>Clientes satisfechos</th>
+                    <th>Años de experiencia</th>
+                    <th>Proyectos realizados</th>
+                    <th>Capacitaciones</th>
+                </tr>
+            </thead>
+            <tbody align="center">
+                <tr>
+                    <td>281</td>
+                    <td>7</td>
+                    <td>305</td>
+                    <td>143</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <br>
         <div align="center">
             <img src="dist/img/qse-300x300-1.png" alt="imagen_nosotros">
         </div>
@@ -107,6 +148,7 @@
                     de productos y/o servicios.</p>
                 <a href="homologacion-de-proveedores.html">Conocer más</a>
             </article>
+
         </section>
     </main>
 
@@ -145,7 +187,6 @@
 
     <hr>
     <footer>
-
 
         <div align="center">
             <p>Todos los derechos resevados &copy;</p>
