--- a/homologacion-de-proveedores.html
+++ b/homologacion-de-proveedores.html
@@ -12,8 +12,8 @@
     <meta name="author" content="Juan Jose Lazo Hoyos">
 
     <title>
-        sistema de gestion de calidad
-        iso 9001:2015</title>
+        Homologación de
+        Proveedores</title>
 </head>
 
 <body>
