--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                         <tr>
 
 
-
+                            <th>
+                                <a href="#">Inicio</a>
+                            </th>
+                            <th width="20"></th>
                             <th>
                                 <a href="index.html#nosotros">Nosotros</a>
                             </th>
